--- a/jekyll/useraccount/index.html
+++ b/jekyll/useraccount/index.html
@@ -38,7 +38,6 @@ mixins: header-mixin
             </div>
             <div class="section inputs" v-if="userDetails">
                   <ui-textbox
-                      floating-label
                       label="First Name"
                       placeholder="Enter your first name"
                       :value="ifNullReturnEmptyString(userDetails.first_name)"
@@ -48,7 +47,6 @@ mixins: header-mixin
                       :class="{'is-active' : isFocused}"
                   ></ui-textbox>
                   <ui-textbox
-                      floating-label
                       label="Last Name"
                       placeholder="Enter your last name"
                       :value="ifNullReturnEmptyString(userDetails.last_name)"
@@ -58,9 +56,8 @@ mixins: header-mixin
                       :class="{'is-active' : isFocused}"
                   ></ui-textbox>
                   <ui-textbox
-                      floating-label
                       label="Email"
-                      placeholder="Enter your email name"
+                      placeholder="Enter your email address"
                       :value="ifNullReturnEmptyString(userDetails.email)"
                       v-model="userDetails.email"
                       style="float: left; margin-left: 30px;"
