--- a/jekyll/users/index.html
+++ b/jekyll/users/index.html
@@ -353,7 +353,7 @@ mixins: header-mixin
                       <button type="button" class="mdl-button mdl-js-button modalButton" @click="createNewFormAssignment()"
                       :disabled="!selectedForm">SUBMIT</button>
                   </a>
-                  <button type="button" class="mdl-button mdl-js-button modalButton" @click="closeDialog()">CANCEL</button>
+                  <button type="button" class="mdl-button mdl-js-button modalButton" @click="closeAddFormDialog()">CANCEL</button>
               </div>
 
           </div>
