pushing some last minute redlines

--- a/jekyll/submissions/index.html
+++ b/jekyll/submissions/index.html
@@ -12,7 +12,7 @@ mixins: header-mixin
 ---
 
 
-<div class="page-content">
+<div class="">
 
 <div class="mdl-grid" >
         <div class="section">
