pushing some last minute redlines

--- a/jekyll/submissions/index.html
+++ b/jekyll/submissions/index.html
@@ -50,7 +50,7 @@ mixins: header-mixin
 
             </div>
 
-
+            <div id="alert" class=""></div>
 
             <!-- Mdl Card -->
         </div>
