--- a/jekyll/users/index.html
+++ b/jekyll/users/index.html
@@ -188,7 +188,7 @@ mixins: header-mixin
 
       <div class="mdl-grid" >
 
-            <span class="backLink" @click="activeUser = null">
+            <span class="backLink" @click="removeActiveUser">
                 < Back to user management
             </span>
             <div class="editButotn" style="float: right;">
