--- a/jekyll/useraccount/index.html
+++ b/jekyll/useraccount/index.html
@@ -99,32 +99,32 @@ mixins: header-mixin
                        </td>
                        <td>
                          <div v-show="!editMode">
-                           <i class="material-icons" v-if="form.admin">done</i>
+                           <i class="material-icons" v-if="form.role === 'admin'">done</i>
                          </div>
                          <div v-show="editMode">
 
-                            <i class="material-icons" v-if="form.admin" @click="setOthersToFalse(form, 'admin')">check_box</i>
+                            <i class="material-icons" v-if="form.role === 'admin'" @click="setOthersToFalse(form, 'admin')">check_box</i>
                             <i class="material-icons" v-else @click="setOthersToFalse(form, 'admin')">check_box_outline_blank</i>
                          </div>
 
                        </td>
                        <td>
                           <div v-show="!editMode">
-                            <i class="material-icons" v-if="form.write">done</i>
+                            <i class="material-icons" v-if="form.role === 'write'">done</i>
                           </div>
                           <div v-show="editMode">
 
-                            <i class="material-icons" v-if="form.write" @click="setOthersToFalse(form, 'write')">check_box</i>
+                            <i class="material-icons" v-if="form.role === 'write'" @click="setOthersToFalse(form, 'write')">check_box</i>
                             <i class="material-icons" v-else @click="setOthersToFalse(form, 'write')">check_box_outline_blank</i>
                           </div>
                        </td>
                        <td>
                           <div v-show="!editMode">
-                            <i class="material-icons" v-if="form.read">done</i>
+                            <i class="material-icons" v-if="form.role === 'read'">done</i>
                           </div>
                           <div v-show="editMode">
 
-                            <i class="material-icons" v-if="form.read" @click="setOthersToFalse(form, 'read')">check_box</i>
+                            <i class="material-icons" v-if="form.role === 'read'" @click="setOthersToFalse(form, 'read')">check_box</i>
                             <i class="material-icons" v-else @click="setOthersToFalse(form, 'read')">check_box_outline_blank</i>
                           </div>
 
