--- a/jekyll/users/index.html
+++ b/jekyll/users/index.html
@@ -255,7 +255,7 @@ mixins: header-mixin
               <span style="font-weight: 200; color: #2e2e2e;" v-show="activeUser.formPermissions.length > 0">List of survey forms this user is assigned to:</span>
               <button class="mdl-button mdl-button--colored mdl-js-button addForm" id="menu-lower-left"
                 @click="addForm()" style="float: right;"
-                v-if="activeUser.role !== 'admin'">
+                v-if="activeUser.role === 'write'">
                   <i class="material-icons">add</i> ADD FORM
                 </button>
             </div>
