Fixed the header menu issue for write and read users

--- a/jekyll/useraccount/index.html
+++ b/jekyll/useraccount/index.html
@@ -71,12 +71,12 @@ mixins: header-mixin
             <h3 style="margin-bottom: 35px;">Forms:</h3>
             </div>
               <span style="font-weight: 200; color: #2e2e2e;">List of survey forms this user is assigned to:</span>
-              <button class="mdl-button mdl-button--colored mdl-js-button addForm" id="menu-lower-left"
+                <!-- <button class="mdl-button mdl-button--colored mdl-js-button addForm" id="menu-lower-left"
                 @click="addUser()"
                 style="float: right;"
                 v-if="user.role === 'write'">
                   <i class="material-icons">add</i> ADD FORM
-                </button>
+                </button> -->
             </div>
 
 
