--- a/jekyll/users/index.html
+++ b/jekyll/users/index.html
@@ -255,7 +255,7 @@ mixins: header-mixin
               <span style="font-weight: 200; color: #2e2e2e;" v-show="activeUser.formPermissions.length > 0">List of survey forms this user is assigned to:</span>
               <button class="mdl-button mdl-button--colored mdl-js-button addForm" id="menu-lower-left"
                 @click="addForm()" style="float: right;"
-                v-if="activeUser.role === 'write'">
+                v-if="activeUser.role === 'write' || activeUser.role === 'read'">
                   <i class="material-icons">add</i> ADD FORM
                 </button>
             </div>
@@ -372,7 +372,7 @@ mixins: header-mixin
                 <p>The new form has been added to user.</p>
               </div>
               <div class="mdl-dialog__actions">
-                  <button type="button" class="mdl-button mdl-js-button closeDial" @click="closeDialog()">Close</button>
+                  <button type="button" class="mdl-button mdl-js-button closeDial" @click="closeAddFormDialog()">Close</button>
               </div>
 
           </div>
